# Particle_swarm

./: .gitignore  README.md
Convergence_experiments/batch_script/: run_container.sh  run_job.sh  submit_job.sh
Convergence_experiments/buzz_script/: fun.bdb  fun.bzz
Convergence_experiments/buzz_script/includes/: targets.bzz
Convergence_experiments/experiments/: explore_2robot.argos  template.argos
Convergence_experiments/loop_function/src/: CMakeLists.txt  Planning.cpp  Planning.h
Simulation/Convergence_experiments/Data_analysis/: Convergence.ipynb
Simulation/Convergence_experiments/Data_analysis/.ipynb_checkpoints/: Convergence-checkpoint.ipynb
Simulation/Convergence_experiments/batch_script/: run_job.sh
Simulation/Convergence_experiments/buzz_script/: fun.bo  fun.bzz
Simulation/Convergence_experiments/buzz_script/includes/: Single_linkage.bzz  vec3.bzz
Simulation/Convergence_experiments/loop_function/src/: CMakeLists.txt
Simulation/Docker_files/: Dockerfile  entrypoint.sh  run_docker.sh
Simulation/Movement_experiments/: algorithmPseudocode.txt  edge_following.txt
Simulation/Movement_experiments/batch_scripts/: launch_clover_50.sh  launch_jobs.sh  launch_jobs_effectiveness.sh  run_job.sh
Simulation/Movement_experiments/buzz_scripts/: Object_movement_test.bdb  Object_movement_test.bo  Object_movement_test.bzz  SheepStructuring.bdb  SheepStructuring.bo  SheepStructuring.bzz
Simulation/Movement_experiments/buzz_scripts/includes/: table.bzz  targets.bzz
Simulation/Movement_experiments/data_processing/: DistortionComputation.py  PositionVis-Summary.py  PositionVis.ipynb  PositionVis.py
Simulation/Movement_experiments/data_processing/Time taken analysis/: Time_taken_in_each_state.ipynb
Simulation/Movement_experiments/data_processing/Time taken analysis/.ipynb_checkpoints/: Time_taken_in_each_state-checkpoint.ipynb
Simulation/Movement_experiments/data_processing/position_archive/: sample_positions.csv
Simulation/Movement_experiments/experiments/: SheepStructuringStudy.argos  circling.argos  exp_data.csv  positions.csv  template.argos  template_exp.argos  testbuzzexperiment.argos
Simulation/Movement_experiments/loop_funcs/: CMakeLists.txt  exp_lf.cpp  exp_lf.h  kh_exp_lf.cpp  kh_exp_lf.h
